Bug 448855 - Resolution changed, but the label in the monitor mockup shows the old resolution.
Summary: Resolution changed, but the label in the monitor mockup shows the old resolut...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kscreen (other bugs)
Version First Reported In: 5.23.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kscreen-bugs-null@kde.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-20 22:28 UTC by postix
Modified: 2022-02-02 11:43 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments
Screenshot (1.60 MB, image/png)
2022-01-20 22:28 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2022-01-20 22:28:58 UTC
Created attachment 145685 [details]
Screenshot

STEPS TO REPRODUCE
1. Opened screen settings
2. Changed Resoltuion from 800x600 to 2560x1440 and scaling to 2x
3. Hit Apply and "keep"

OBSERVED RESULT
Resolution changed, but the label in the monitor mockup shows the old resolution.
It changes eg, once the KCM tab is switched.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon Testing
KDE Plasma Version: 5.23.90
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Wayland
Comment 1 Bug Janitor Service 2022-01-24 15:46:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kscreen/-/merge_requests/81
Comment 2 Bug Janitor Service 2022-02-02 11:29:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kscreen/-/merge_requests/82
Comment 3 Méven Car 2022-02-02 11:41:42 UTC
Git commit ea7bcf35653ed3febde39926ba14024a0a958163 by Méven Car, on behalf of Méven Car.
Committed on 02/02/2022 at 11:27.
Pushed by meven into branch 'master'.

Ensure to emit ResolutionRole dataChanged signals

M  +2    -2    kcm/output_model.cpp

https://invent.kde.org/plasma/kscreen/commit/ea7bcf35653ed3febde39926ba14024a0a958163
Comment 4 Méven Car 2022-02-02 11:42:52 UTC
Git commit 3e24d0b368ad933b1fe420dbfeb311c95367a6a6 by Méven Car, on behalf of Méven Car.
Committed on 02/02/2022 at 11:42.
Pushed by meven into branch 'Plasma/5.24'.

Ensure to emit ResolutionRole dataChanged signals

M  +2    -2    kcm/output_model.cpp

https://invent.kde.org/plasma/kscreen/commit/3e24d0b368ad933b1fe420dbfeb311c95367a6a6