Ensure to emit ResolutionRole dataChanged signals

BUG: 448855